--- a/HW-01/02/02.vcxproj.filters
+++ b/HW-01/02/02.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="02.cpp">
+    <ClCompile Include="Task.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
